--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,9 @@ captures/
 # Uncomment the following lines if you do not want to check your keystore files in.
 *.jks
 *.keystore
+keystore.properties
+release.jks
+debug.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
